--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,22 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
+    implementation 'com.lorentzos.swipecards:library:1.0.9'
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+
+
+    implementation('io.socket:socket.io-client:1.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
 
 
 
