--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
 
 
 
