--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 
 
+
 }
 
 android {
@@ -30,6 +31,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
+
+
     compileOptions {
 
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -63,7 +68,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
@@ -72,23 +76,17 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.squareup.picasso:picasso:2.8'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-
-
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     //Circle ImageView
+
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
 
-
-
     implementation('io.socket:socket.io-client:1.0.0') {
         exclude group: 'org.json', module: 'json'
     }
-
-
-
-
-
+    implementation 'com.mapbox.maps:android:10.10.0'
+    implementation("com.google.android.gms:play-services-location:21.0.1")
 
 }
